--- a/Frontend/src/Pages/Dashboard.css
+++ b/Frontend/src/Pages/Dashboard.css
@@ -1,16 +1,13 @@
 .dashboard-container {
-    min-height: 100vh;
+    min-height: 90vh;
     background-color: rgb(246, 246, 246);
-
 }
 
 .vehicle-data {
-    width: 24.4%;
     height: 90px;
-
 }
 
 .vehicle-data-text {
-    width: 300px;
+    /* width: 100%; */
     height: 20px;
 }
