--- a/Frontend/src/Pages/Maintenance/Maintenance.css
+++ b/Frontend/src/Pages/Maintenance/Maintenance.css
@@ -15,4 +15,21 @@
         display: flex;
         align-items: center;
     }
+    .bg-greenish{
+        background-color: #c3db9f;
+    }
+    .w-30{
+        width: 30%;
+    }
+    .text-greenish{
+        color: #6a7a52;
+    }
+    .j-between{
+        display: flex;
+        justify-content: space-between;
+    }
+    .checkBox{
+        accent-color: #5f7743;      
+    }
+
 }
