--- a/Frontend/src/components/common/Header.css
+++ b/Frontend/src/components/common/Header.css
@@ -72,6 +72,11 @@
     font-weight: 600;
     color: rgb(176, 14, 14);
   }
+  .brandMalayalm
+  { font-family: "Manjari", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
   
   
   @media screen and (max-width: 500px) {
